<resources>
    <string name="app_name">Day18_SideMenu</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_chicken">Chicken</string>
    <string name="menu_egg_1">Egg 1</string>
    <string name="menu_egg_2">Egg 2</string>
    <string name="menu_egg">Egg</string>
    <string name="menu_egg_group">Egg group</string>
    <string name="menu_eggs_1">Eggs 1</string>
    <string name="menu_eggs_2">Eggs 2</string>
</resources>